syntax = "proto3";

service Upload {
  rpc StreamUploadFile (stream UploadRequest) returns (UploadResponse) {};
  rpc ClearFolder (ClearRequest) returns (ClearResponse) {};
}

message UploadRequest {
  string name = 1;
  bytes fileChunk = 2;
}

message UploadResponse {
  bool success = 1;
  int64 ts = 2;
  string message = 3;
}

message ClearRequest {
  bool do = 1;
}

message ClearResponse {
  bool success = 1;
  string message = 2;
}
